testsuite/tests/saks/should_fail/saks_fail024.stderr

saks_fail024.hs:7:6: error:
    Expected an unqualified type constructor: Data.Kind.Type
